add two static photos using seperate divs.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
       <title>Template</title>
     </head>
     <body>
-      
+      <div class="polaroid-tile">
+        <img src="img/polaroid.png" alt="a background border of a polariod photo"/>
+        <img src="img/drums.jpg" alt="drum kit" />
+      </div>
+      <div class="polaroid-tile2">
+        <img src="img/polaroid.png" alt="a background border of a polariod photo"/>
+        <img src="img/drums.jpg" alt="drum kit" />
+      </div>
     </body>
   </html>
